--- a/assets/css/extended/scroll-bar.css
+++ b/assets/css/extended/scroll-bar.css
@@ -28,7 +28,6 @@
 @media screen and (min-width: 768px) {
     /* reset */
     ::-webkit-scrollbar {
-        width: var(--logo-border-size);
         height: 11px;
     }
 }
